fix bug with nav dropdown on mobile screens

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -264,6 +264,11 @@ footer.footer-container {
 }
 
 @media (max-width: 430px) {
+    .navbar-dropdown-cover {
+        display: none;
+        visibility: hidden;
+    }
+
     .carousel {
         display: none;
     }
